<resources>
    <string name="app_name">CookBook</string>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open" translatable="false">Open</string>
    <string name="nav_close" translatable="false">Close</string>
    <string-array name="Amounts">
        <item>Units</item>
        <item>g</item>
        <item>kg</item>
        <item>lbs</item>
        <item>ml</item>
        <item>lit.</item>
        <item>oz</item>
        <item>tsp</item>
        <item>tbsp</item>
        <item>cups</item>
        <item>pc.</item>
    </string-array>
    <string-array name="Categories">
        <item>Category</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
<!--    <string name="login_by_phone" translatable="false">Login by phone</string>-->

    <string name="register">Register</string>
    <string name="user_name">User Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="home">Home</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="description">Description</string>


    <string name="Units">Units</string>
    <string name="name">Name</string>
    <string name="instructions">Instructions</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="category_name">Category name</string>
    <string name="ingredients">Ingredients</string>
    <string name="change_language">Change Language</string>
    <string name="hebrew">Hebrew</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="what_we_need">What we need:</string>
    <string name="how_to_make">How to make:</string>
    <string name="amount">Amount</string>
    <string name="ingredient_s">Ingredient(s)</string>
</resources>