<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/food_background"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/recipe_LBL_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@color/cardview_dark_background"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/recipe_LBL_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipe_LBL_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@color/cardview_dark_background"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/recipe_LBL_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipe_LBL_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@color/cardview_dark_background"
        android:text="@string/ingredients"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/recipe_LBL_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipe_LBL_ingredients"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@color/cardview_dark_background"
        android:text="@string/instructions"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>