<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".activities.RecipeCreationActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="58dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recipeCreation_ETXT_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:lines="1"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="62dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recipeCreation_ETXT_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:lines="2"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/recipeCreation_IMG_picture"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@color/white"
            android:scaleType="fitCenter"
            android:src="@drawable/open_camera" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ingredient_ETXT_ingredientAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="4"
                android:background="@color/white"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ingredient_ETXT_ingredientName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="6"
                android:background="@color/white"
                android:hint="@string/ingredient_s"
                android:maxLines="2"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/ingredient_SPNR_ingredientUnit"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_weight="5"
                android:background="@color/white"
                android:entries="@array/Amounts"
                android:gravity="end" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ingredient_BTN_addIngredient"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="2"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="+"

                android:textAllCaps="false" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipeCreation_RV_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_ingredient" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="160dp">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/recipeCreation_ETXT_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/instructions"
                android:lines="7"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <!--    <com.google.android.material.textfield.TextInputLayout-->
        <!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_marginTop="8dp"-->
        <!--        android:hint="@string/instructions">-->

        <!--        <com.google.android.material.textfield.TextInputEditText-->
        <!--            android:id="@+id/Appointment_ET_Notes"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:gravity="top"-->
        <!--            android:inputType="textMultiLine"-->
        <!--            android:lines="4" />-->
        <!--    </com.google.android.material.textfield.TextInputLayout>-->


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"

            >

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/category_name"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/recipeCreation_SPNR_categories"
                android:layout_width="160sp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:entries="@array/Categories" />

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/recipeCreation_BTN_addRecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_recipe" />


    </LinearLayout>
</ScrollView>
